# EngineMirror

./: .clang-format  .gitignore  ARCHITECTURE.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg-configuration.json  vcpkg.json  west.ini
Tests/: CMakeLists.txt
Tests/unit/: ConfigTest.cpp  EntityTest.cpp  PathUtilsTest.cpp  PoolAllocatorTest.cpp  TimeUtilsTest.cpp  WorldTest.cpp
WestEngine/: CMakeLists.txt  WestEngine.cpp
WestEngine/Constants/: AvailableInputCommands.cfg  BitMasks.hpp  Components.hpp  LuaAPI.hpp  Systems.hpp  UniformConstants.hpp
WestEngine/Core/: EngineManager.cpp  InputManager.cpp  InterfaceManager.cpp  RenderManager.cpp  SceneManager.cpp  ShaderManager.cpp  SystemManager.cpp  WindowManager.cpp
WestEngine/Core/Components/: ComponentFactory.cpp
WestEngine/Core/Entity/: Camera.cpp  Entity.cpp  EntityBuilder.cpp  Scene.cpp  World.cpp
WestEngine/Core/Scripting/: LuaFacade.cpp  LuaFacade.hpp
WestEngine/Core/Systems/: MovementSystem.cpp  PlayerControl.cpp  SystemFactory.cpp
WestEngine/Core/Utils/DataUtils/: ObjectLoader.cpp  UniformUtils.cpp
WestEngine/Core/Utils/Draw/: DebugDrawUtils.cpp
WestEngine/Core/Utils/InputUtils/: InputObserver.cpp  KeyboardCallbacks.cpp  MouseCallbacks.cpp
WestEngine/Core/Utils/Math/: PositionCalculation.cpp
WestEngine/CoreHeaders/: EngineManager.h  InputManager.h  InterfaceManager.h  RenderManager.h  SceneManager.h  ShaderManager.h  SystemManager.h  WindowManager.h
WestEngine/CoreHeaders/Components/: ComponentFactory.h  Material.hpp  Model.h  Movement.hpp  Position.h  Shader.h  Umbrella.h
WestEngine/CoreHeaders/Entity/: Camera.h  Entity.h  EntityBuilder.h  Scene.h  World.hpp
WestEngine/CoreHeaders/Interfaces/: IComponent.h  IManager.h  ISystem.h
WestEngine/CoreHeaders/Systems/: MovementSystem.hpp  PlayerControl.h  SystemFactory.h  Umbrella.h
WestEngine/CoreHeaders/Utils/DataUtils/: ObjectLoader.h  UniformUtils.h
WestEngine/CoreHeaders/Utils/Draw/: DebugDrawUtils.h
WestEngine/CoreHeaders/Utils/InputUtils/: InputObserver.h  KeyboardCallbacks.h  MouseCallbacks.h
WestEngine/CoreHeaders/Utils/Math/: PositionCalculation.h
WestEngine/Shader/: Fragment.fs  Vertex.vs  worldshader.fs  worldshader.vs
WestEngine/Shader/Debug/: DebugFShader.fs  DebugVShader.vs
WestGame/Assets/Models/: Cube.mtl
WestGame/Config/: Game.ini  Settings.cfg
WestGame/Scripts/: Main.lua  Utils.lua  WestAPI.lua  yaml.lua
WestGame/Scripts/Entities/: Cube.yaml  DemoWorld.yaml
WestGame/Scripts/Intro/: IntroScene.lua
WestGame/Scripts/Player/: PlayerBehaviour.lua
WestInterface/: CMakeLists.txt  FacadeStructs.h  WestInterfaceFacade.h
WestInterface/Shader/: InterfaceFragementShader.fs  InterfaceVertexShader.vs
WestInterface/WestInterface/: InterfaceBuilder.cpp  InterfaceBuilder.h  SettingsInterface.cpp  SettingsInterface.h  WestInterfaceFacade.cpp
WestInterface/WestInterface/Elements/: Button.hpp  ContainerElement.hpp  DebugElement.hpp  DropDown.hpp  IElement.hpp  Icon.hpp  Label.hpp  Umbrella.hpp
WestInterface/WestInterface/Elements/Factory/: ElementFactory.cpp  ElementFactory.h
WestInterface/WestInterface/Observer/: EventObserver.cpp  EventObserver.h  IObserver.h  ValueObserver.h
WestInterface/WestInterface/RenderManagment/: ComponentData.h  ComponentDataPool.cpp  ComponentDataPool.h  TextRenderManager.cpp  TextRenderManager.h  UIRenderManager.cpp  UIRenderManager.h
WestUtils/: CMakeLists.txt
WestUtils/Config/: Config.cpp
WestUtils/Include/: Config.h  CoreConstants.hpp  PathUtils.h  PoolAllocator.h  ThreadPool.h  TimeUtils.hpp  WestLogger.h
WestUtils/Logging/: WestLogger.cpp
WestUtils/PathUtils/: PathUtils.cpp
WestUtils/ThreadPool/: PoolAllocator.cpp  ThreadPool.cpp
